--- a/Module 4/FirstProject/FirstProject/Views/Shared/_NavBar.cshtml
+++ b/Module 4/FirstProject/FirstProject/Views/Shared/_NavBar.cshtml
@@ -1,39 +1,20 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-top">
-
     <div class="container">
-
         <div class="navbar-header">
-
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-
                 <span class="icon-bar"></span>
-
                 <span class="icon-bar"></span>
-
                 <span class="icon-bar"></span>
-
             </button>
-
             @Html.ActionLink("Express Learn", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-
         </div>
-
         <div class="navbar-collapse collapse">
-
             <ul class="nav navbar-nav">
-
                 @*<li>@Html.ActionLink("Home", "Index", "Home")</li> //this line shows how you can navigate to the home page*@
-
-                <li>@Html.ActionLink("Customers", "Customers", "Customers")</li>
-
-                <li>@Html.ActionLink("Movies", "Movies", "Movies")</li>
-
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
             </ul>
-
             @Html.Partial("_LoginPartial")
-
         </div>
-
     </div>
-
 </div>
