--- a/Module 4/FirstProject/FirstProject/Views/Customers/Index.cshtml
+++ b/Module 4/FirstProject/FirstProject/Views/Customers/Index.cshtml
@@ -16,7 +16,7 @@ else
     <table class="table table-bordered table-hover">
         @*<thead>
             <tr>
-                <th>Customer</th>
+                <th>Customers:</th>
             </tr>
         </thead>*@
         <tbody>
