--- a/Module 4/FirstProject/FirstProject/Views/Movies/Index.cshtml
+++ b/Module 4/FirstProject/FirstProject/Views/Movies/Index.cshtml
@@ -1,8 +1,28 @@
-﻿@{
+﻿@model IEnumerable<FirstProject.Models.Movie>
+
+@{
     ViewBag.Title = "Movies";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<h2>Movies:</h2>
+
+@if (!Model.Any())
+{
+    <p>There are no movies yet.</p>
 }
 
-<h2>Movies</h2>
+else
+{
+    <table class="table table-bordered table-hover">
+        <tbody>
+            @foreach (var movie in Model)
+            {
+                <tr>
+                    <td>@movie.Name</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
 
-<p>List of movies goes here</p>
 
