--- a/Module 4/FirstProject/FirstProject/Views/Home/Index.cshtml
+++ b/Module 4/FirstProject/FirstProject/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Express Learn";
+    ViewBag.Title = "Vidly";
 }
 
 <div class="jumbotron">
-    <h1>Welcome to Express Learn!</h1>
-    <p class="lead">Express Learn is an app which allows you to easily and quickly learn a language.</p>
+    <h1>Welcome to Vidly!</h1>
+    <p class="lead">Vidly is a movie rental app.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
