--- a/Module 4/FirstProject/FirstProject/Views/Shared/_Layout.cshtml
+++ b/Module 4/FirstProject/FirstProject/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Express Learn</p>
+            <p>&copy; @DateTime.Now.Year - Vidly</p>
         </footer>
     </div>
 
